@@ -42,9 +42,9 @@ class NumpyConversionsTestCase(unittest.TestCase):
         self.checkHomogeneous(f, "numeric", "double")
 
     def testVectorComplex(self):
-        self.assertTrue(False) # arrays of complex causing segfault
-#         c = numpy.array([1j, 2j, 3j], dtype=numpy.complex_)
-#         self.checkHomogeneous(c, "complex", "complex")
+        #self.assertTrue(False) # arrays of complex causing segfault
+        c = numpy.array([1j, 2j, 3j], dtype=numpy.complex_)
+        self.checkHomogeneous(c, "complex", "complex")
 
     def testVectorCharacter(self):
         s = numpy.array(["a", "b", "c"], dtype="S")
